# 2023-summer-fullstack-workshop

./: .gitmodules  README.md
.devcontainer/: devcontainer.json
.github/workflows/: backend-docker-default-publish.yml  backend-docker-multi-stage-publish.yml  backend-docker-python-publish.yml  deploy-slides.yml  docker-publish.yml  main.yml
backend/: Spacefile  pyproject.toml  requirements.txt
backend/backend/: main.py
backend/dockerfiles/: Dockerfile  Dockerfile.multi-stage  Dockerfile.python
fastapi/: package-lock.json  package.json  slides.md
fastapi/pages/: ai-art-portrait.md  chatgpt.md  midjourney.md
frontend/: package-lock.json  package.json
frontend-demo/: package-lock.json  package.json
frontend-demo/src/: App.tsx  api.ts  index.css  main.tsx  routes.tsx
frontend-demo/src/components/: Calculator.tsx  Links.tsx
frontend-demo/src/layouts/: index.tsx
frontend-demo/src/pages/: Calculator.tsx  Photo.tsx  index.tsx
frontend/src/: App.tsx  api.ts  routes.tsx
frontend/src/components/: calculator.tsx  photo.tsx
frontend/src/layouts/: index.tsx
frontend/src/pages/: index.tsx
pratice/: Dockerfile  pyproject.toml  requirements.txt
pratice/pratice/: main.py
react-mui/: package-lock.json  package.json  slides.md
react-mui/pages/: mui.md  react-router.md
